--- a/Read/ReadAndroid/05.智能硬件/08.M1卡和CPU卡学习.md
+++ b/Read/ReadAndroid/05.智能硬件/08.M1卡和CPU卡学习.md
@@ -16,6 +16,7 @@
     - 3.4 M1扇区数据块结构
     - 3.5 M1卡片操作步骤
     - 3.6 M1卡运作机理
+    - 3.7 M1卡开发思路
 - 04.IC卡开发设计
     - 4.1 总体设计思路
     - 4.2 卡操作流程设计
@@ -192,6 +193,18 @@
     - 存取控制为4个字节，共32位，扇区中的每个块（包括数据块和控制块）的存取条件是由密码和存取控制共同决定的，在存取控制中每个块都有相应的三个控制位
     - ![image](https://img-blog.csdnimg.cn/direct/b7d56511392e448ead1d3e5256f5fc8c.png)
     - 例如C1x0中的C代码这是控制位，1代表第一位，0代表是块0的控制位。
+- M1卡密码机制。是M1卡最为复杂的地方，在存取控制中每个块都有相应的三个控制位,它们的定义如下
+    ```
+    块0：   C10   C20   C30
+    块1：   C11   C21   C31
+    块2：   C12   C22   C32
+    块3：   C13   C23   C33
+    ```
+- 一个扇区的三个数据块，我们可以利用密码机制对它们分别进行权限控制。数据块（块0、块1、块2）的存取控制如下：
+    - ![image](https://img-blog.csdnimg.cn/direct/decd9fad1da0427a8e2360df68258f36.png)
+    - 例如：当块0的存取控制位C10 C20 C30=100时，验证密码A或密码B正确后可读；验证密码B正确后可写；不能进行加值、减值操作。
+
+
 
 
 
@@ -236,26 +249,29 @@
 
 
 #### 3.6 M1卡运作机理
-- M1卡运作的机理流程
+- M1卡运作的机理流程如下：
     - 连接读写器 → 寻卡 → 识别卡（获取卡序列号） → 从多卡中选一张卡 → 向卡中缓冲区装载密码 → 验证密码 → 进行读写 → 关闭连接
 - 如果概括来说的话，主要也就五部分：
     - 开关连接、寻卡、验证密码、读取、关闭(归位)。
+- 基本操作规则。如下所示：
+    - （1）程序开始，调用rf_init函数初始化串口。
+    - （2）寻卡，调用rf_card；
+    - （3）对单个扇区操作，顺次执行A～D；A、选定要操作的扇区；B、装载密码，调用rf_load_key；C、验证密码，调用rf_authentication；D、进行操作，包括读写及值操作。E、调用rf_halt。
+    - （4）关闭串口，调用rf_exit。程序正常退出或因错误退出之前，要使用函数；否则再次执行初始化串口时将出错。
+
+
+
+#### 3.7 M1卡开发思路
+- M1开发实践思路步骤如下
+    - 第一步：获取卡类型。程序开始，开始初始化串口。然后开始寻卡操作。
+    - 第二步：获取卡号。
+    - 第三步：M1扇区读写。读写卡操作分为两个步骤：密码校验、读写卡。只有对当前要读写的块数据所在的扇区进行密码校验之后才能进行接下来的读写操作。
+    - 第四步：M1重置操作。
 
 
 
 
-#### 3.5 M1卡开发思路
-- 第一步：获取卡类型
-- 
-- 第二步：获取卡号
-- 第三步：M1扇区读写
-    - 读写卡操作分为两个步骤：密码校验、读写卡。只有对当前要读写的块数据所在的扇区进行密码校验之后才能进行接下来的读写操作。
-- 第四步：M1重置操作
 
 
 
-
-####  M1卡通信原理
-- Mifare 1卡（M1卡、IC卡）读写操作及工作原理整理
-  - https://blog.csdn.net/qq_32348883/article/details/126603790
 
