--- a/Read/ReadAndroid/05.智能硬件/08.M1卡和CPU卡学习.md
+++ b/Read/ReadAndroid/05.智能硬件/08.M1卡和CPU卡学习.md
@@ -4,11 +4,12 @@
     - 1.2 IC智能卡说明
     - 1.3 基础概念介绍
 - 02.CPU卡基础学习
-    - 2.1 CPU基础概念
-    - 2.2 CPU操作流程
-    - 2.3 读卡器与卡交互指令
-    - 2.4 APDU指令学习
-    - 2.5 CPU卡开发思路
+    - 2.1 CPU操作流程
+    - 2.2 读卡器与卡交互指令
+    - 2.3 APDU指令格式
+    - 2.4 APDU指令组成
+    - 2.5 发送指令详细剖析
+    - 2.6 响应指令详细解析
 - 03.M1卡基础学习
     - 3.1 什么是M1卡
     - 3.2 M1卡数据结构
@@ -63,29 +64,7 @@
 
 
 ### 02.CPU卡基础学习
-#### 2.1 CPU基础概念
-- 进行APDU通讯的前提是：
-    - 有读卡器（必选）和对应的SDK通讯包（可选）
-    - 知道IC卡的APDU命令
-- **APDU是智能卡与智能卡读卡器之间传送的信息单元**
-
-    |  CLA   | INS | P1 | P2  | Lc | Data| Le |
-    | :----  | :---- | :----  | :----  | :----  | :----  | :----  |
-    | 指令类别 | 指令码 | 参数P1 | 参数P1 | Data的长度（不超过255个字节）  | 返回数据  | 表示响应时回答的数据字节数，0表是需要最大可能长度（不超过255个字节） |
-- APDU命令格式分类(报文结构，从终端设备发出的命令和卡片信息必须按照四种格式发送)
-    - ① 情形1：CLA INS P1 P2 00
-    - ② 情形2：CLA INS P1 P2 Le
-    - ③ 情形3：CLA INS P1 P2 Lc Data
-    - ④ 情形4：CLA INS P1 P2 Lc Data Le
-- APDU响应报文(响应数据 响应状态码)
-    - Data SW1 SW2 如何理解？DATA：返回给用户的数据，即命令的执行结果。SW1、SW2： 返回命令处理的状态。
-    - 响应也对应几种情形 ① 情形1：SW1 SW2；② 情形2：Le字节的Data SW1 SW2
-    - 关于响应报文的错误码，具体可以看：https://blog.csdn.net/lonet/article/details/7541265
-
-
-
-
-#### 2.2 CPU操作流程
+#### 2.1 CPU操作流程
 - 如何去操作CPU卡
     - 手机去感应非接触式CPU卡一般都是通过NFC，想用手机去感应身份证有两个前提：一你手机支持NFC功能，二你得知道对操作身份证的指令。
     - 比如读取身份的指令，知道指令后你就可以开发个手机app然后进行感应读取身份。
@@ -95,7 +74,8 @@
 
 
 
-#### 2.3 读卡器与卡交互指令
+
+#### 2.2 读卡器与卡交互指令
 - 1.读卡器与卡交互第一步一般是选择应用。
     - 一张IC卡里面可能有多个应用，所谓应用就是卡片和终端之间的应用协议和相关的数据集，读卡器和卡的交互其实就是和应用的交互，卡的交易其实就是选择某个应用做交易。
     - 目前卡商所生产的卡基本上都是一个应用，即便如此，但根据银联卡的规范，应用选择这个步骤也是必不可少的。
@@ -105,17 +85,32 @@
 
 
 
-#### 2.4 APDU指令学习
-##### 2.4.1 APDU是什么
-- APDU即应用协议数据单元
-    - 是智能卡与读卡器之间通信的标准方式，定义了智能卡和终端的通信规范。
-    - 举一个案例，比如发送1条APDU指令，发送数据：00A4040006A00000000101，那么这串数据有什么规范呢？
+#### 2.3 APDU指令格式
 - APDU应用场景介绍
     - APDU提供了一种标准的、协议无关的方法，用于智能卡和终端设备进行通信。它是智能卡系统的核心组件，广泛应用于银行卡、身份证、健康卡等各种应用场景。
+- APDU是什么东西
+    - ISO 7816-4规范有定义APDU(= ApplicationProtocol data unit, 是智能卡与智能卡读卡器之间传送的信息单元, （给智能卡发送的命令）指令)
+- 进行APDU通讯的前提是：
+    - 有读卡器（必选）和对应的SDK通讯包（可选）
+    - 知道IC卡的APDU命令
+- **APDU是智能卡与智能卡读卡器之间传送的信息单元**
+
+    |  CLA   | INS | P1 | P2  | Lc | Data| Le |
+    | :----  | :---- | :----  | :----  | :----  | :----  | :----  |
+    | 指令类别 | 指令码 | 参数P1 | 参数P1 | Data的长度（不超过255个字节）  | 返回数据  | 表示响应时回答的数据字节数，0表是需要最大可能长度（不超过255个字节） |
+- **APDU命令格式分类**(报文结构，从终端设备发出的命令和卡片信息必须按照四种格式发送)
+    - ① 情形1：CLA INS P1 P2 00
+    - ② 情形2：CLA INS P1 P2 Le
+    - ③ 情形3：CLA INS P1 P2 Lc Data
+    - ④ 情形4：CLA INS P1 P2 Lc Data Le
+- **APDU响应报文**(响应数据 响应状态码)
+    - Data SW1 SW2 如何理解？DATA：返回给用户的数据，即命令的执行结果。SW1、SW2： 返回命令处理的状态。
+    - 响应也对应几种情形 ① 情形1：SW1 SW2；② 情形2：Le字节的Data SW1 SW2
 
 
 
-##### 2.4.2 APDU指令组成
+
+#### 2.4 APDU指令组成
 - APDU指令由四个部分组成：
     - CLA（Class）：指令类别，用于确定指令所属的指令集，如00表示标准指令集，80表示安全指令集。
     - INS（Instruction）：指令代码，用于区分执行的操作，如06表示比较指令，0A表示读二进制文件指令。
@@ -130,9 +125,10 @@
 
 
 
-##### 2.4.3 发送指令详细剖析
+#### 2.5 发送指令详细剖析
 - 例子：/send 00A4040006A00000000101
     - 这条指令是一个APDU指令，用于选择与AID（Application Identifier，应用标识符）相对应的应用程序。
+    - 指令说明：00（CLA）A4（INS）04（P1）00（P2）06（Le）A00000000101（Data）
 - 具体来说，它的结构如下：
     - CLA（Class）：0x00 表示标准指令集
     - INS（Instruction）：0xA4 表示选择文件命令
@@ -144,7 +140,9 @@
     - 发送该APDU指令可以将具有AID为A00000000101的应用程序选择为活动应用程序，并通过通道来与其通信
 
 
-##### 2.4.4 响应指令解析
+
+
+#### 2.6 响应指令详细解析
 - 例子：第一个响应指令，9FE7398E9000；第二个响应指令，9000
 - 先来看第一个指令：9FE7398E9000
     - 属于Le字节的Data SW1 SW2状态，那么它是什么含义？Le表示响应data，SW1表示命令处理状态；SW2表示命令处理限定。
@@ -185,7 +183,7 @@
 
 
 
-##### 3.3 M1扇区密码结构
+#### 3.3 M1扇区密码结构
 - 每个扇区的块3为控制块，包括了密码A、存取控制、密码B。具体结构如下：
     - 密码A（6字节）  存取控制（4字节） 密码B（6字节）。在我们实际开发中用的是密码A
     - ![image](https://img-blog.csdnimg.cn/direct/e4b207e48d1b4c9eb5de5fc7698d8090.png)
