--- a/Read/Management/03.团队管理/06.提高团队凝聚力.md
+++ b/Read/Management/03.团队管理/06.提高团队凝聚力.md
@@ -42,7 +42,7 @@
 
 ### 06.共同去面对挑战
 - 有一句经典台词就是这么说的：“今日谁与我共同浴血，他就是我的兄弟。”显然一起扛过枪的兄弟，感情是很铁的，毕竟是经历过不离不弃的并肩作战。虽然我们现在没有仗要打，但至少有如下两个方面的事情近似打仗：
-- 一些有挑战的大型项目或紧急事故的应对。跨团队的对抗性活动，比如趣味运动会、Dota 比赛等。毋需去说教，而是让大家在“硝烟”和“炮火”中去建立深厚的感情，这就是所谓的“事上练”。
+- 一些有挑战的大型项目或紧急事故的应对。跨团队的对抗性活动，比如趣味运动会、趣味游戏比赛等。毋需去说教，而是让大家在“硝烟”和“炮火”中去建立深厚的感情，这就是所谓的“事上练”。
 
 
 
