--- a/Read/Management/01.管理转变/01.小白快速带团队.md
+++ b/Read/Management/01.管理转变/01.小白快速带团队.md
@@ -15,8 +15,8 @@
 
 ### 01.管理到底做什么
 #### 1.1 会被问到何问题
-- 时常会被问到，“如何打造高效执行的团队？”“如何群策群力打胜仗？”“如何做团队建设？”等等。这类问题的一个共同点就是“大”，很难给出系统的回答，因为这些问题本身包含着很多子问题。
-- 第一个问题“如何打造高效执行的团队”，至少包含这样三个子问题：如何打造团队？如何让这个团队有高效的执行力？如何定义“高效”？
+- 时常会被问到，“如何打造高效执行的团队？”，“如何做团队建设？”等等。这类问题共同点就是“大”，很难给出系统的回答，因为这些问题本身包含着很多子问题。
+- 对于第一个问题“如何打造高效执行的团队”，至少包含这样三个子问题：如何打造团队？如何让这个团队有高效的执行力？如何定义“高效”？
 - 对于第二个问题也是如此，“如何群策群力打胜仗”，也至少需要回答三个子问题：如何群策群力？如何打胜仗？如何定义打“胜”了？
 - 对于第三个问题，“如何做团队建设”，要想回答好，也得先弄清楚：在你眼里什么叫团队建设？这个词太泛泛了。你希望通过做团队建设达到什么目的？如何着手做？
 - 于是你发现了，一个大问题背后依然是多个难以捉摸的大问题，很难理出头绪。
