--- a/Read/ReadBlogWiki/4.3用海绵法找时间.md
+++ b/Read/ReadBlogWiki/4.3用海绵法找时间.md
@@ -16,7 +16,8 @@
 
 
 ### 02.跨领域的注意点
-- 10000 小时定律所说的“成功”或者“成为专家”，是指在某一个领域，而不是所有领域一通百通。所以专业聚焦对于 10000 小时定律的落地非常关键，如果你从 A 领域转行到 B 领域，而它们的差异又比较大的话，那么你分别在这两个领域投入的时间是不能累加的，相当于以前在 A 领域的积累被浪费掉了。
+- 10000 小时定律所说的“成功”或者“成为专家”，是指在某一个领域，而不是所有领域一通百通。所以专业聚焦对于 10000 小时定律的落地非常关键。
+- 如果你从 A 领域转行到 B 领域，而它们的差异又比较大的话，那么你分别在这两个领域投入的时间是不能累加的，相当于以前在 A 领域的积累被浪费掉了。
 - 换句话说，分别在两个不同的领域投入了5000个小时的人才，在专业度上比不过专注在某一个领域投入了10000个小时的专家。所以，分清楚同一个领域和不同的领域是很重要的。
 
 
