--- a/Read/ReadBlogWiki/5.3理解能力的锻炼.md
+++ b/Read/ReadBlogWiki/5.3理解能力的锻炼.md
@@ -15,7 +15,8 @@
 
 
 ### 01.什么是理解能力
-- 我们都追求金字塔顶端的“表达能力”，但在“表达能力”和“社交语言”当中，有一个承上启下的能力特别重要，那就是“理解能力”。如果没有“理解能力”，就无法把我们对他说的话说出来， 也就是无法实现从“输入”转化为“输出”。
+- 我们都追求金字塔顶端的“表达能力”，但在“表达能力”和“社交语言”当中，有一个承上启下的能力特别重要，那就是“理解能力”。
+- 如果没有“理解能力”，就无法把我们对他说的话说出来， 也就是无法实现从“输入”转化为“输出”。
 
 
 
