--- a/Read/ReadBlogWiki/5.8做好技术的演讲.md
+++ b/Read/ReadBlogWiki/5.8做好技术的演讲.md
@@ -14,7 +14,8 @@
 
 ### 01.看一些案例数据
 #### 1.1 看几个案例故事
-- 新东方老师授课以妙趣横生、言语幽默、段子丰富著称，于欢乐之中就让你记住了很多单词和用法。而这些看似信手拈来的讲课背后的付出是：每 10 个小时的课程，需要撰写逐字稿和练习的时间长达 6 个半月；
+- 新东方老师授课以妙趣横生、言语幽默、段子丰富著称，于欢乐之中就让你记住了很多单词和用法。
+- 而这些看似信手拈来的讲课背后的付出是：每 10 个小时的课程，需要撰写逐字稿和练习的时间长达 6 个半月；
 - TED 演讲者通常提前数个月开始准备，TED 会安排专业的团队进行指导和排练。哪怕有时候演讲经验丰富，也需要做很多的投入和准备！
 
 
