--- a/Read/ReadBlogWiki/4.1掌握些学习方法.md
+++ b/Read/ReadBlogWiki/4.1掌握些学习方法.md
@@ -14,10 +14,12 @@
 
 
 
+
 ### 01.先来说一个场景
-- 不知道你是不是也有这样的感受：光是上班累得要死，还要陪对象吃饭逛街看电影，还有群里各种吃瓜，看剧，根本就没什么时间学习；等到哪天好不容易有点空余时间，又因为没有计划，只能随便找本书或者上网水水论坛看看；就算知道要针对某个技能专门提升一下，也不知道怎么学才能达到精通水平；过段时间回头一看，前几周学的东西又忘得差不多了；跟别人交流一下子就暴露了水平……
+- 不知道有没有这样的感受：上班累得要死，还要陪家人，还有群里各种吃瓜，看剧，根本就没什么时间学习；等到哪天有点空余时间，又因为没有计划，只能随便找本书或者上网学习看看。
+- 就算知道要针对某个技能专门提升一下，也不知道怎么学才能达到精通水平；过段时间回头一看，前几周学的东西又忘得差不多了；跟别人交流一下子就暴露了水平……
 - **根据上面的例子，大概拆分成几个问题：没有时间去学习，有了空闲时间不知道怎么安排，即使学习了后不知道是否学会，感觉学到了但是一旦交流或使用又不会呢**。
-- 因此建立一套学习机制很关键，或者写，或者做，或者计划，或者跟小伙伴交流，需要什么样的准则，下面我会说到……
+- 因此建立一套学习机制很关键，或者写，或者做，或者计划，或者跟小伙伴交流，需要什么样的准则，下面会逐一说到……
 
 
 
@@ -32,18 +34,19 @@
 
 
 ### 03.有效学习这回事
-- 可能有很多的学习想法，或者有很多学习的渠道，订阅了很多学习课程。是否想过，如何高效学习，让自己的学习更有价值。
-- 为什么要在学习前面加上“有效”两个字。对大部分普通人来说，肯定希望学有所成，得到明确的收获，不管是解决一个工作中的具体问题，还是想提升自己的竞争力，亦或是缓解外界信息太多、变化太快带来的焦虑。不管是什么原因，对学习都是有诉求的，希望它能有效且高效。
+- 可能有很多的学习想法，或者有很多学习的渠道，订阅了很多学习课程。是否想过，如何高效学习，让自己的学习更有价值。为什么要在学习前面加上“有效”两个字。
+- 对大部分普通人来说，肯定希望学有所成，得到明确的收获，不管是解决工作中的具体问题，还是想提升自己的竞争力，或是缓解外界信息太多、变化太快带来的焦虑。不管是什么原因，对学习都是有诉求的，希望它能有效且高效。
 
 
 
 ### 04.一万小时的定律
-- 总的指导原则是10000小时定律，它是一个很出名的用于专业领域提升的理论，有大量的相关资料可以参考（例如《异类》《1万小时天才理论》等），其核心思想是如果你想要在专业领域不断提升自己的能力，必须投入足够的时间。
+- 总的指导原则是10000小时定律，它是一个很出名的用于专业领域提升的理论。
+- 有大量的相关资料可以参考（例如《异类》《1万小时天才理论》等），其核心思想是如果你想要在专业领域不断提升自己的能力，必须投入足够的时间。
 
 
 
 ### 05.用海绵法找时间
-- 10000 小时可不短，相当于平均每天3小时，持续10年时间。我们平时光是工作就已经“累成狗”了，可能还有家人需要照顾，怎么才能找到自己的10000小时呢？
+- 10000 小时可不短，相当于平均每天3小时，持续10年时间。平时工作就已经“累成狗”了，可能还有家人需要照顾，怎么才能找到自己的10000小时呢？
 - 这就要靠海绵学习法了。海绵学习法是一个时间管理方法，它可以让你轻松地挤出时间，既不会对工作、家庭和娱乐有明显的影响，又能够兼顾学习。
 
 
@@ -55,8 +58,10 @@
 
 
 ### 07.环式思考学习法
-- 确定目标和计划后，我们具体要怎么提升技术能力呢？技术能力可以拆解成三个维度，技术深度、技术宽度和技术广度。
-- 针对技术能力的不同维度，有3个不同的学习方法：**链式学习法**适合提升技术深度，通过自顶向下逐步深入的方式，将关联技术逐一掌握。**比较学习法**适合提升技术宽度，通过比较相似的知识或者技能，全面掌握单个领域的技术。**环式学习法**适合提升技术广度，通过学习业务闭环流程中相关技术，全面掌握多个领域的技术。
+- 确定目标和计划后，我们具体要怎么提升能力呢？能力可以拆解成三个维度，深度、宽度和广度。针对能力的不同维度，有3个不同的学习方法：
+- **链式学习法**适合提升深度，通过自顶向下逐步深入的方式，将关联技术逐一掌握。
+- **比较学习法**适合提升技术宽度，通过比较相似的知识或者技能，全面掌握单个领域的技术。
+- **环式学习法**适合提升技术广度，通过学习业务闭环流程中相关技术，全面掌握多个领域的技术。
 
 
 
@@ -85,7 +90,8 @@
 
 ### 10.总结和梳理一下
 - 总结一下这一讲的重点内容：一套系统的学习方法，既需要一个总的指导原则，也需要回答 4 个关键问题：时间从哪里来？学什么？怎么学？怎么保证效果？
-- 在我总结的这套学习方法中，10000小时定律提供了指导原则；海绵学习法解决了时间从哪里来的问题；三段分解法解决了学什么的问题；链式、环式和比较学习法解决了怎么学的问题，Play 和 Teach学习法解决了怎么保证学习效果的问题。学习方法是相辅相成的，你需要基于当前的级别和工作内容，把多个方法组合起来使用。
+- 在总结的这套学习方法中，10000小时定律提供了指导原则；海绵学习法解决了时间从哪里来的问题；三段分解法解决了学什么的问题；链式、环式和比较学习法解决了怎么学的问题，Play 和 Teach学习法解决了怎么保证学习效果的问题。
+- 学习方法是相辅相成的，你需要基于当前的级别和工作内容，把多个方法组合起来使用。
 
 
 
