--- a/Read/ReadBlogWiki/4.3用海绵法找时间.md
+++ b/Read/ReadBlogWiki/4.3用海绵法找时间.md
@@ -24,10 +24,10 @@
 
 ### 03.工作外主动提升
 - 10000 个小时相当于连续 10 年平均每天投入 3 个小时。你可能会有问：“我每天工作 10 个小时，这样算下来，岂不是不到4年就可以成为大牛了？”
-- 很明显，这是不太可能的。原因在于，工作中的很多时间都是在做一些重复的事情，只是让已经掌握的技能变得更熟练而已，边际效益是越来越低的。所以，工作1个小时不等于学习 1 个小时。
+- 很明显，这是不太可能的。原因在于，**工作中的很多时间都是在做一些重复的事情，只是让已经掌握的技能变得更熟练而已，边际效益是越来越低的**。
 - 这就像你练小提琴，每天都只练习《生日快乐歌》这个曲子，就算练10年也不可能成为专业小提琴手。你必须先练习某个难度的曲谱，熟练后再来练习下一难度的曲谱，这样逐步提升难度，最终才能成为专业的小提琴手。
 - **如果你想要高效地提升自己，就必须不断地主动学习新的、复杂度更高的技能，等到工作中用得上的时候，抓住机会在实践的过程中练习，获得经验教训，进一步加深对技能的理解和掌握。如此循环往复，一步一步地提升自己的能力**。
-- 除了上班时间外，尽量保证每天能够有 1 个小时的主动提升时间。
+- 工作1个小时不等于学习 1 个小时，除了上班时间外，尽量保证每天能够有 1 个小时的主动提升时间。
 
 
 
