--- a/Read/ReadAndroid/01.大型方案/31.国际化项目方案实践.md
+++ b/Read/ReadAndroid/01.大型方案/31.国际化项目方案实践.md
@@ -1,13 +1,68 @@
 # 国际化项目方案实践
 #### 目录介绍
-- 
+- 01.整体概述介绍
+    - 1.1 项目背景的说明
+    - 1.2 国际化要做什么
+    - 1.3 国际化事项说明
+- 02.多语言国际化适配
+    - 2.1 如何获取系统语言
+    - 2.5 拒绝硬编码字符串
+- 03.多布局国际化适配
+- 04.多资源国际化适配
+- 05.根据时区校验时间
 
 
 
 
+### 01.整体概述介绍
+#### 1.1 项目背景的说明
+- 应用上线到谷歌应用市场
+    - 那么应该做好本地化的支持，用来支持不同语言及地区的风俗习惯，当然也要结合公司拓展的海外市场需要，那么对于一款应用，至少应该做到多语言和多布局的支持。
+
+
+
+#### 1.2 国际化要做什么
+- 1、必须要进行资源文件的国际化
+    - 这些资源主要是指：文字资源，字体资源【使用默认】，图片资源
+- 2、针对特殊的翻译，需要做做适配。
+    - 语言翻译，可以获取系统local自动配置相关语言。如果app中有语音播放，则音频文件也需要处理
+- 3、接口需要做国际化，需要在接口参数中增加字段。
+    - 看看接口是否需要添加字段用来区分不同的区域。注意：下发数据对应的资源
+- 4、组件UI兼容适配
+    - 针对一些组件，可能需要做兼容，比如在中文下内容长度合适，但是在其他语言情况下，长度超出，那么可能得做适配。
+
+
+#### 1.3 国际化事项说明
+
+
+
+### 02.多语言国际化适配
+#### 2.1 如何获取系统语言
 
 
 
 
+#### 2.5 拒绝硬编码字符串
+- 拒绝任何形式的硬编码字符串，所有字符串应该通过string.xml资源文件加载，便于本地化
+    ```
+     ../values-en/strings.xml 英语
+     <string name="my_topic_btn">My Topic</string>
+     ../values-ar/strings.xml 阿拉伯语
+     <string name="my_topic_btn">موضوعي</string>
+     ../values-fr/strings.xml 法语
+     <string name="my_topic_btn">mon sujet</string>
+     ../values-hi/strings.xml 印度语
+     <string name = "my_topic_btn"> मेरा विषय</string>
+    
+    //而不要使用     
+    tvView.setText(“硬编码字符串，这样无法做到动态加载语言”);  
+    ```
+
+
+
+
+- 国际化语言
+- https://juejin.cn/post/6844903588313956365?searchId=20240122105714756FF3E9760273C6C8F9
+- https://juejin.cn/post/7046685955230531597?searchId=20240122105714756FF3E9760273C6C8F9
 
 
