--- a/Read/ReadBlogWiki/4.2有效学习这件事.md
+++ b/Read/ReadBlogWiki/4.2有效学习这件事.md
@@ -9,6 +9,7 @@
 
 
 
+
 ### 01.为何说有效学习
 - 现实结果是最好的“评判师”，如果学习不能让自己发生真正的改变，那学再多又有什么用呢？懂得百点不如改变一点。
 - 你根本不用在意自己读后记住了多少内容，即使整本书都记不起来了也没关系，只要有一个点触动了自己，并让自己发生了真实的改变，这本书就没有白读，这次阅读就是有效的。
@@ -20,6 +21,7 @@
 - 要有学习的意愿。如果你自己压根就不想学习，那说再多也没用。毕竟现在没有老师、家长在旁边看着，外界又有那么多诱惑。成年人的学习，靠的就是自驱力。
 
 
+
 ### 03.明确学习的目标
 - 要明确学习的目标。如果你设定的只是“好好学习”、“学会Java”或“学会Android开发”这样含糊的目标，大概率会半途而废，或者学的东一榔头西一棒子，明明花了时间，却好像没啥成果。
 - 目标不要设置太模糊，太模糊的目标其实可以把它叫做方向，应该把焦点放到拆分方向为一个个具体可落实的小目标，这样比较好量化。
@@ -27,9 +29,10 @@
 
 
 ### 04.学习后付诸实践
-- 付诸实践，否则你就会永远停留在想法阶段。就像现在很多的云健身党，天天喊着要跑步、要健身，查了资料、做了计划、收藏了指导视频，结果只看不练，仿佛看了别人的健身视频就跟自个已经练了一样，最终还是停在想想喊喊的阶段。
-- 实践的阶段，拆解目标是非常重要的，上来就对着大目标去，很有可能你没能攻克目标，反而被目标给拖垮呢。
-- 目标越大，中途放弃的可能就越大。我们可以把每个小目标设定的比当前的水平稍微好一点，稍稍跨越出舒适区去挑战一下更高的难度，这样的学习效果是最好的。
+- 付诸实践，否则你就会永远停留在想法阶段。就像一些云健身党，天天喊着要跑步、要健身、做了计划、收藏了指导视频，结果只看不练，最终还是停在想想喊喊的阶段。
+- 实践的阶段，拆解目标是非常重要的，上来就对着大目标去，很有可能你没能攻克目标，反而被目标给拖垮呢。目标越大，中途放弃的可能就越大。
+- 我们可以把每个小目标设定的比当前的水平稍微好一点，稍稍跨越出舒适区去挑战一下更高的难度，这样的学习效果是最好的。
+
 
 
 ### 05.避免被过多干扰
@@ -58,9 +61,10 @@
 - 一定要产出一些作品，比解决了一个工作中的技术难题，你也可以把自己的学习过程中的思考写下来分享出去，还可以以教代学，把自己学习到的东西教给别人，看看能不能教得会。教学相长，就是这个道理。
 
 
+
 ### 07.零碎学习可记录
 - 零碎的网点，只需学习那些让你深深触动的知识，尝试去打碎各家的知识体系，只取其中最触动自己的点或块，然后将其拼接成自己的知识网络。
-- 当你在阅读一句或一段话产生了关联思考🤔的时候，一定要立马把它记下来，这些才是真正能被你吸收的精华。然后利用费曼技巧，通过自己的语言，用最简单的话把一件事情讲清楚，让外行人也能听懂。
+- 当你在阅读一句或一段话产生了关联思考的时候，一定要立马把它记下来，这些才是真正能被你吸收的精华。然后利用费曼技巧，通过自己的语言，用最简单的话把一件事情讲清楚，让外行人也能听懂。
 
 
 
