--- a/Read/ReadAndroid/01.大型方案/31.国际化项目方案实践.md
+++ b/Read/ReadAndroid/01.大型方案/31.国际化项目方案实践.md
@@ -32,12 +32,20 @@
     - 针对一些组件，可能需要做兼容，比如在中文下内容长度合适，但是在其他语言情况下，长度超出，那么可能得做适配。
 
 
+
 #### 1.3 国际化事项说明
 
 
 
 ### 02.多语言国际化适配
 #### 2.1 如何获取系统语言
+- 自Android7.0系统起，由LocaleList管理语言
+    - 系统可设置多个语言列表，根据优先级来选定语言。正常情况下，若应用语言跟随系统，则直接LocaleList.getDefault().get(0)则可拿到系统当前语言。
+    - 可是，若应用通过configuration.setLocale(locale)设置语言后(源码实际是new LocaleList(locale))，该locale会被塞进系统语言列表的首位，此时系统当前语言并不是首位的语言。
+    - 因此，若应用再次选择跟随系统后，拿到语言列表首位的语言就不是系统当前的语言。
+
+
+
 
 
 
