--- a/Read/ReadDesign/01.设计模式准则详谈.md
+++ b/Read/ReadDesign/01.设计模式准则详谈.md
@@ -10,25 +10,26 @@
 
 
 ### 01.面向对象六大原则
-- 单一职责原则：指一个类的功能要单一，不能包罗万象。
-- 开放封闭原则：指一个模块在扩展性方面应是开放的，在更改性方面应是封闭的。
-- 替换原则：子类应当可以替换父类，并出现在父类能够出现的任何位置。
-- 依赖原则：具体依赖抽象，上层依赖下层。
-- 接口分离原则：模块间要通过抽象接口隔开，而不是通过具体的类强行耦合起来。
-- 迪米特法则：一个实体应当尽量少地与其他实体之间发生相互作用，使得系统功能模块相对独立。
+#### 1.1 介绍六大原则
+- 六大原则一句话介绍
+    - 单一职责原则：指一个类的功能要单一，不能包罗万象。
+    - 开放封闭原则：指一个模块在扩展性方面应是开放的，在更改性方面应是封闭的。
+    - 替换原则：子类应当可以替换父类，并出现在父类能够出现的任何位置。
+    - 依赖原则：具体依赖抽象，上层依赖下层。
+    - 接口分离原则：模块间要通过抽象接口隔开，而不是通过具体的类强行耦合起来。
+    - 迪米特法则：一个实体应当尽量少地与其他实体之间发生相互作用，使得系统功能模块相对独立。
+
+
 
 
 
 ### 02.单一职责原则介绍
-#### 2.1 先思考几个问题
-- 01.如何理解类的单一指责，单一指责中这个单一是如何评判的？
-- 02.懂了，但是会用么，或者实际开发中有哪些运用，能否举例说明单一职责优势？
-- 03.单一指责是否设计越单一，越好呢？说出你的缘由和论证的思路想法？
-- 04.单一职责原则，除了应用到类的设计上，还能延伸到哪些其他设计方面吗？
-
-
-
-#### 2.2 如何理解单一职责
+#### 2.1 如何理解单一职责
+- 先思考几个问题
+    - 01.如何理解类的单一指责，单一指责中这个单一是如何评判的？
+    - 02.懂了，但是会用么，或者实际开发中有哪些运用，能否举例说明单一职责优势？
+    - 03.单一指责是否设计越单一，越好呢？说出你的缘由和论证的思路想法？
+    - 04.单一职责原则，除了应用到类的设计上，还能延伸到哪些其他设计方面吗？
 - 单一职责原则的定义描述非常简单，也不难理解。
     - 一个类只负责完成一个职责或者功能。也就是说，不要设计大而全的类，要设计粒度小、功能单一的类。
     - 换个角度来讲就是，一个类包含了两个或者两个以上业务不相干的功能，那我们就说它职责不够单一，应该将它拆分成多个功能更加单一、粒度更细的类。
