--- a/Read/ReadAndroid/01.大型方案/36.NDK开发设计实践.md
+++ b/Read/ReadAndroid/01.大型方案/36.NDK开发设计实践.md
@@ -20,6 +20,7 @@
     - 4.1 so库生成打包
     - 4.2 so库查询操作
     - 4.3 so库如何反编译
+    - 4.4 so库加载流程
 - 05.实践几个案例
     - 5.1 Java静态调用C/C++
     - 5.2 C/C++调用Java
@@ -238,6 +239,36 @@
     find so file: /Users/yc/github/YCJniHelper/SafetyJniLib/build/intermediates/library_jni/debug/jni/armeabi-v7a/libsafetyjnilib.so
     find so file: /Users/yc/github/YCJniHelper/SignalHooker/build/intermediates/library_jni/debug/jni/armeabi-v7a/libsignal-hooker.so
     ```
+- 在安装完成App后，app中的如果有so库
+    - 那么，so的路径在/data/data/packagename/lib, 或者/data/app/packagename/lib相关目录下。
+    - 在system/data下面的lib目录里
+- Android系统提供了API接口来获取so的路径，用法举例：
+    - String libName = "libAbc.so";
+    - String libPathName = context.getApplicationInfo().nativeLibraryDir +"/" + libName;
+- 如何通过代码查询app中包含的so库
+    - 大概的意思是读取当前进程pid中map文件，针对文件后缀名是否包含so进程过滤。具体可以看:[AppSoLibUtils](https://github.com/yangchong211/YCCommonLib/blob/master/ToolUtilsLib/src/main/java/com/yc/toolutils/AppSoLibUtils.java)
+
+
+
+#### 4.4 so库加载流程
+- 那么编译好的so库文件，是如何加载到程序中呢
+    ```
+    static {
+        System.loadLibrary("calljnilib");   //这个地方只需要写so库文件名称就可以
+    }
+    ```
+- 实际开发中，可能会遇到的问题，找不到so库导致崩溃
+    ```
+    UnsatisfiedLinkError: JNI_ERR returned from JNI_OnLoad in "/data/app/com.yc.bayuwen-Tx8F0bXvjkL-3bREyDNOFQ==/lib/arm/calljnilib.so"
+    ```
+- System.load源码分析流程步骤如下所示
+    - 1.System#loadLibrary，看源码可以知道，调用了Runtime去加载文件。这里调用的是loadLibrary0，继续往下看
+    - 2.Runtime#loadLibrary0，调用`classLoader.findLibrary(libraryName)`方法查找so库文件，如果找到文件的name路径为空，则会直接抛出异常。最终也会通过jni调用nativeLoad加载动态库
+    - 2.1 ClassLoader#findLibrary，这里的loader是`BaseDexClassLoader`，它表示
+    - 2.2 BaseDexClassLoader#findLibrary，其中pathList的类型为DexPathList
+    - 2.3 DexPathList#findLibrary，这里收集了apk的so目录，一般位于：/data/app/${package-name}/lib/arm/。还有系统的so目录：System.getProperty(“java.library.path”)，可以打印看一下它的值：/vendor/lib:/system/lib，其实就是前后两个目录，事实上64位系统是/vendor/lib64:/system/lib64。最终查找so文件的时候就会在这三个路径中查找，优先查找apk目录。
+
+
 
 
 ### 05.实践几个案例
