--- a/Read/ReadBlogWiki/4.10玩和教保证效果.md
+++ b/Read/ReadBlogWiki/4.10玩和教保证效果.md
@@ -9,7 +9,8 @@
 
 
 ### 01.先说一个小案例
-- 针对不同维度的学习目标，可以分别采用不同的学习方法。不过就算你用对了方法，在学习过程中往往还是会遇到一些难以解决的困难，导致学习变成了“从入门到忘记”。那么，怎么摆脱这种的学习困境，保证学习效果呢？
+- 针对不同维度的学习目标，可以分别采用不同的学习方法。不过就算你用对了方法，在学习过程中往往还是会遇到一些难以解决的困难，导致学习变成了“从入门到忘记”。
+- 那么，怎么摆脱这种的学习困境，保证学习效果呢？
 
 
 
