--- a/Read/ReadBlogWiki/7.4记忆能力的训练.md
+++ b/Read/ReadBlogWiki/7.4记忆能力的训练.md
@@ -1,8 +1,7 @@
 #### 目录介绍
 - 01.记忆力组成介绍
-- 02.锻炼短期记忆力
-- 03.视觉记忆力锻炼
-- 04.听觉记忆力锻炼
+- 02.改变记忆的时间
+- 03.改变记忆的方法
 - 05.编码拆分小游戏
 - 06.提高长期记忆力
 - 07.给大脑记忆保鲜
@@ -13,20 +12,35 @@
 
 
 ### 01.记忆力组成介绍
-- 我小时候读书读不好时，经常被说：“金鱼脑子，什么东西都记不住。”听上去，好像记忆能力跟成绩好不好关系很大。
+- 小时候读书读不好时，经常被说：“金鱼脑子，什么东西都记不住。”听上去，好像记忆能力跟成绩好不好关系很大。
 - 记忆能力由3部分组成，包括短期记忆力、长期记忆力和回忆能力，长期记忆力又包括情景记忆力和语义记忆力。
+- 在学习过程中，针对一些知识，大部分人都是每天翻来覆去的去记，最终的结果却还是记不住多少。思考一下如何用最少的时间记住更多的东西，从而提高学习效果？
 
 
 
-### 02.锻炼短期记忆力
+### 02.改变记忆的时间
+#### 2.1 掌握遗忘规律
+- 首先是掌握遗忘规律。先来看一下遗忘规律是什么？是指记忆和时间之间的关系，刚刚记完一个东西，过20分钟后只能记得其中的58.2%；一个小时后是44.2%；九个小时后35.8%；一天后是33.7%；两天后是27.8%；六天后是25.2%；一个月后是21.1%。
+- 对照这样一个遗忘规律，也就说明了时时刻刻重复记忆的效果并不一定好，在快遗忘之前进行重复记忆才是最好的。
+
+
+#### 2.2 解决遗忘规律
+- 要保证记忆效果，至少要做到学习完成后当天进行复习记忆一次，第二天再来复习一次，接着第三天可以不再记忆，第四天再来记忆一次，接下来是隔一周后记一次，最后是一个月后再来记一次。
+- 举个例子：在学习一本书时，每天都要安排出时间来对今天学习的内容进行一下复习，接着每周对本周学习的内容进行复习，其次是每学完一个章节也需要来复习一次，最后是整本书完成后要整体再来复习一次。
+
+
+
+### 03.改变记忆的方法
+### 3.1 便签记忆力锻炼
 - 大脑的便笺条。短期记忆力是大脑的便笺条，便笺条的作用是备忘，随手一记，做完了就扔掉；短期记忆力也可以随时随地暂时储存一些信息，事件发生之后有的信息可能就丢失了。
 - 短期记忆力如同长期记忆力和回忆能力的入口，如果入口特别小，那么输入的东西必然就很少。所以，短期记忆力是基础，只有打好基础，才能把整体的记忆力提高上去。
 - 既然把短期记忆力比作大脑的便笺条，那要提高短期记忆力，无非就是以下两点：第一，扩大便笺条的容量，这其中包括提高视觉记忆力和听觉记忆力；第二，提高便笺条的使用效率，即进行编码拆分。
 
 
 
-### 03.视觉记忆力锻炼
+### 3.2 视觉记忆力锻炼
 - 看到了什么。使用视觉记忆力，先要学会如何运用视觉。学会观察、专注，是我们首先要关注的。当开始读故事时，就要逐渐养成学会观察的习惯，尝试着讲出小故事。
+- 通过联想来记忆，把文字性的东西转成图片图像来进行记忆。研究表明人们对于图片的记忆是远远比对文字的记忆更加深刻的，因为大脑在记忆图片时，同时调动了左右脑的非语言区和语言区。更方便记忆！
 
 
 
