feat：完善心跳功能逻辑

--- a/Read/ReadBlogWiki/3.5结构化思维思考.md
+++ b/Read/ReadBlogWiki/3.5结构化思维思考.md
@@ -1,12 +1,60 @@
 #### 目录介绍
+- 01.先说生活的场景
+- 02.理解结构化思维
+- 03.结构化思维特点
+- 04.运用结构化思维
+- 05.结构化思维案例
+- 06.结构化思维技巧
+
+
+
+### 01.先说生活的场景
+- 大量的碎片信息塞满了我们的大脑，当我们真正需要用到时（比如：写文章、汇报工作时），还是无法直接使用。
+- 所谓的结构化思维，便是，在解决问题时，找到一个框架，然后，把这些碎片信息，放进去，帮助我们有效地快速解决问题。
+
+
+
+### 02.理解结构化思维
+- 结构化思维是一种将复杂问题分解为简单组成部分，并以清晰的逻辑框架进行组织和分析的思考方式。
+- 它通过建立层次结构、分类关系和因果关系等方式，帮助我们更好地理解问题的本质，找到问题的关键点，并制定相应的解决方案。
 
 
 
 
+### 03.结构化思维特点
+- 1.有助于梳理思路：结构化思维可以帮助我们将复杂的问题分解成简单的组成部分，从而更好地理清思路，减少混乱和困惑。
+- 2.提高问题解决能力：结构化思维可以帮助我们系统性地分析问题，找到问题的核心要素和关键因素，并制定相应的解决方案。
+- 3.促进有效沟通：结构化思维可以帮助我们将复杂的信息以清晰、有条理的方式进行组织和传达，使得沟通更加准确和高效。
+- 4.增强创新能力：通过结构化思维，我们可以从不同的角度审视问题，并发现新的解决方案和创新点。
+
+
+
+### 04.运用结构化思维
+- 1.划分层次：将问题或任务划分为多个层次，形成层级结构。这样可以将问题分解为更易管理和处理的部分，便于逐步解决。
+- 2.归纳分类：将问题中的各个元素或因素进行分类，找出它们之间的共性和差异。通过分类归纳，可以更好地理解问题的本质和规律。
+- 3.建立因果关系：分析问题中各个要素之间的因果关系，找到问题的根本原因和影响因素。这有助于我们找出解决问题的关键点。
+- 4.制定逻辑框架：根据问题的特点和需求，建立逻辑框架，明确问题的目标、资源需求、行动计划等，以确保问题解决的逻辑性和连贯性。
+- 5.使用工具和模型：结构化思维可以借助各种工具和模型来辅助分析和解决问题，如思维导图、SWOT分析、鱼骨图等。这些工具可以帮助我们更好地整理和组织信息。
 
 
 
 
+### 05.结构化思维案例
+- 项目管理：在进行复杂的项目管理时，结构化思维可以帮助我们将项目拆解为多个阶段和任务，并制定相应的计划和资源分配，从而实现项目的高效管理。
+- 决策分析：在面对重要决策时，结构化思维可以帮助我们明确决策目标、评估不同选项的利弊，并基于因果关系进行合理的决策。
+- 问题诊断：在遇到问题或挑战时，结构化思维可以帮助我们找出问题的根本原因和关键因素，进而制定解决方案并执行相应的改进措施。
+
+
+### 06.结构化思维技巧
+- 先大后小：首先将问题整体概括，然后逐步细化为更具体的子问题，以确保问题解决的全面性和准确性。
+- 逻辑推理：根据问题的特点和需求，运用逻辑推理的方法来分析问题，找出各个要素之间的关系，并构建合理的解决方案。
+- 反复迭代：在进行结构化思维过程中，可以反复迭代和调整思路，以确保问题的全面性和有效性。
+- 多角度思考：从不同的角度和视角审视问题，考虑各种可能性和影响因素，避免陷入狭隘的思维模式。
+
+
+
+
+### 01.
 - https://www.processon.com/view/65325ee491483c30269936e6
 
 
