--- a/Read/ReadBlogWiki/5.5表达能力的提升.md
+++ b/Read/ReadBlogWiki/5.5表达能力的提升.md
@@ -85,9 +85,12 @@
 
 
 ### 09.30分钟电梯演讲
-- 麦肯锡30秒电梯理论——来源于麦肯锡公司一次沉痛的教训。该公司曾经为一家重要的大客户做咨询。咨询结束的时侯，麦肯锡的项目负责人在电梯间里遇见了对方的董事长，该董事长问麦肯锡的项目负责人：“你能不能说一下现在的结果呢？”由于该项目负责人没有准备，而且即使有准备，也无法在电梯从30层到1层的30秒钟内把结果说清楚。最终，麦肯锡失去了这一重要客户。
-- 从此，麦肯锡要求公司员工凡事要在最短的时间内把结果表达清楚，凡事要直奔主题、直奔结果。麦肯锡认为，一般情况下人们最多记得住一二三，记不住四五六，所以凡事要归纳在3条以内。这就是如今在商界流传甚广的“30秒钟电梯理论”或称“电梯演讲”。
-- 电梯演讲应用写作方面有一定的启迪作用，要有良好的开头，抓住问题的根本用简单的话说出来，最后要提炼观点。不论写什么文章，都要在观点提炼和归纳上下苦功夫。观点要响亮，归纳要紧凑，最好不要超过三条，做到一挥而切中肯綮，一语而击中要害，一笔而入木三分。
+- 麦肯锡30秒电梯理论——来源于麦肯锡公司一次沉痛的教训。在给一家大客户做咨询结束的时侯，麦肯锡的项目负责人在电梯间里遇见了对方的董事长，该董事长问麦肯锡的项目负责人：“你能不能说一下现在的结果呢？”
+- 由于该项目负责人没有准备，而且即使有准备，也无法在电梯从30层到1层的30秒钟内把结果说清楚。最终，麦肯锡失去了这一重要客户。
+- 从此，麦肯锡要求公司员工凡事要在最短的时间内把结果表达清楚，凡事要直奔主题、直奔结果。
+- 麦肯锡认为，一般情况下人们最多记得住一二三，记不住四五六，所以凡事要归纳在3条以内。这就是如今在商界流传甚广的“30秒钟电梯理论”或称“电梯演讲”。
+- 电梯演讲应用写作方面有一定的启迪作用，要有良好的开头，抓住问题的根本用简单的话说出来，最后要提炼观点。
+- 不论写什么文章，都要在观点提炼和归纳上下苦功夫。观点要响亮，归纳要紧凑，最好不要超过三条，做到一挥而切中肯綮，一语而击中要害，一笔而入木三分。
 
 
 
