--- a/Read/ReadBlogWiki/5.1语言底蕴的提升.md
+++ b/Read/ReadBlogWiki/5.1语言底蕴的提升.md
@@ -13,6 +13,7 @@
 
 
 
+
 ### 01.语言发展金字塔
 - 讲话和演讲最基本的也是最重要的，就是要语音准确、吐字清晰、语言有底蕴。语言能力的金字塔，即语言发展的4大要素，由底层至顶层依次为社交语言、发音吐字、理解能力和表达能力。
 - 社交语言：语言运用在社交场景中能发挥最大功能，
@@ -37,7 +38,9 @@
 
 
 ### 04.保护好表达意图
-- 要明白，表达不仅仅是说话，还包括哭、喊、叫、手势、表情、眼神等。从难受时候的哭，到遇到挫折后的丧气，这些都是表达；一开心就乱拍手，笑的表情，看着别人的眼神，这些也是表达。因此，需要及时地反馈，保护好表达意图。
+- 要明白，表达不仅仅是说话，还包括哭、喊、叫、手势、表情、眼神等。
+- 从难受时候的哭，到遇到挫折后的丧气，这些都是表达；一开心就乱拍手，笑的表情，看着别人的眼神，这些也是表达。因此，需要及时地反馈，保护好表达意图。
+
 
 
 #### 4.1 表达需要一来一回
@@ -45,7 +48,8 @@
 - 因此，真正保护好表达意图，需要一来一回，等3秒再继续。什么叫慢慢说话？就是一来一回的表达……交流一定是双向的！
 
 
-#### 4.2 非语言反馈
+
+#### 4.2 非语言的表达反馈
 - 语言发展过程中，对待别人的表达，除了给出及时反馈之外，还需要有一些非语言上的反馈相结合。动作、表情、语气都是非常重要的。
 - 眼神：和别人平视甚至略低于别人眼睛，这样他人可以感受到平等和安全。如果是居高临下，会让别人感受到地是威胁。
 - 表情：脸部放松、眼神温柔、嘴角上扬保持微笑。如果是眉头紧锁、面部紧绷、嘴巴下垂，那让别人也不容易聊下去。
@@ -56,8 +60,8 @@
 
 
 ### 05.通过游戏来锻炼
-- 特别推崇“玩中学”。因此，可以通过一些合适的游戏来锻炼社交语言。“泛桌游”：学习“轮流”的概念，第一个游戏，把它称作“泛桌游”。
-- “桌游”这个概念大家应该不陌生了，需要明白社交语言里交流的规则：你说完我说，不随意插嘴，不打断别人。桌游是培养交流规则、学习轮流概念特别好的游戏之一。这样一来一回，慢慢地就学会了轮流和等待。
+- 特别推崇“玩中学”。因此，可以通过一些合适的游戏来锻炼社交语言。“泛桌游”：学习“轮流”的概念，第一个游戏，把它称作“泛桌游”。桌游这个概念大家应该不陌生了。
+- 需要明白社交语言里交流的规则：你说完我说，不随意插嘴，不打断别人。桌游是培养交流规则、学习轮流概念特别好的游戏之一。这样一来一回，慢慢地就学会了轮流和等待。
 - 刻意练习。每天进行一次复盘，反思当天哪几个场景下自己已经做得很好了，哪几个场景可以做得更好。
 - 对于可以做得更好的地方，在脑海里复盘、演练一遍：下次遇到类似的场景可以怎么说？肢体语言可以怎样？眼神可以怎样？语气、语调可以怎样？
 - 甚至可以对着镜子练一下。学习的本质就是难的，当你觉得很难时，就需要刻意地去强化、去练习，走出舒适圈。
